all five categories vertically aligned. Need to have equal padding from right to left and stay center. Going to fix nav bar now

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,3 +34,8 @@ body {
 #item-button {
   margin-left: 30px;
 }
+
+.category {
+  padding-left: 20px;
+  list-style-type: none;
+}
